fixed background image intro section mobile  view

--- a/css/style.css
+++ b/css/style.css
@@ -682,8 +682,8 @@ screen and (max-width: 1100px) and (max-height: 700px) {
   }
 
   #intro {
-    background-image: url(../assets/letter-bg.jpg);
-    /* background: #f9fafb; */
+    /* background-image: url(../assets/letter-bg.jpg); */
+    background: #f9fafb;
   }
 
   .letter {
